// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UnitCard > renders default as expected 1`] = `
<div>
  <a
    class="unit-card p-4 flex flex-col gap-2 justify-between border-color-divider border rounded-lg hover:bg-bluedot-lightest hover:border-color-primary"
    href="https://bluedot.org/courses/what-the-fish/1"
    tabindex="0"
  >
    <div
      class="unit-card__item flex flex-col gap-2"
    >
      <p
        class="unit-card__number uppercase text-size-xs font-bold"
      >
        Unit 
        1
      </p>
      <p
        class="unit-card__title text-color-secondary-text text-size-md font-[650]"
      >
        Title
      </p>
      <p
        class="unit-card__description"
      >
        Description
      </p>
    </div>
  </a>
</div>
`;

exports[`UnitCard > renders with optional args 1`] = `
<div>
  <a
    class="unit-card p-4 flex flex-col gap-2 justify-between unit-card--active border-color-primary border rounded-lg hover:bg-bluedot-lightest hover:border-color-primary"
    href="https://bluedot.org/courses/what-the-fish/1"
    tabindex="0"
  >
    <div
      class="unit-card__item flex flex-col gap-2"
    >
      <p
        class="unit-card__number uppercase text-size-xs font-bold"
      >
        Unit 
        1
      </p>
      <p
        class="unit-card__title text-color-secondary-text text-size-md font-[650]"
      >
        Title
      </p>
      <p
        class="unit-card__description"
      >
        Description
      </p>
    </div>
    <div
      class="unit-card__metadata flex flex-row justify-between items-end"
    >
      <span
        class="tag inline-flex items-center px-4 py-2 text-xs font-semibold w-fit text-color-secondary-text container-lined"
        role="status"
      >
        10
         mins
      </span>
    </div>
  </a>
</div>
`;
